overestimation simulation in place
Former-commit-id: 9a7fd054cf8585bc5e4e6dc7bf32b8a98768a41f

--- a/examples/relu_overestimation/yaml/features.yaml
+++ b/examples/relu_overestimation/yaml/features.yaml
@@ -2,8 +2,7 @@
    "features": {
        "featuresFormat": "rowsAndColumns"
         ,"opts": {
-            "fileNames": ["features_10K.gz"]
-            #"fileNames": ["features_100K.gz"]
+            "fileNames": ["features.gz"]
             ,"contentType": "float"
         }
     } 
