--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,9 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
 
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pytest h5py nose
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pytest h5py nose
   - source activate test-environment
+  - pip install numpy==1.14.0
   - pip install tensorflow==1.7
   - pip install keras==2.1.5
 
